--- a/3-AppPython.ipynb
+++ b/3-AppPython.ipynb
@@ -10,7 +10,9 @@
         "oIo1Mjloc1YL",
         "CwoYaDfWurJa"
       ],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNGOpoqyhRD3xqmXZXsy+l2",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -21,6 +23,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/iceman67/ai/blob/main/3-AppPython.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
