Colaboratory를 통해 생성됨

--- a/5_titanic_age_fare_lr.ipynb
+++ b/5_titanic_age_fare_lr.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP/gali5FO+hxepQF3N+f6N",
+      "authorship_tag": "ABX9TyPbHWsTPV7/4LhdCbQUar5Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "from sklearn import linear_model\n",
         "\n",
         "df = pd.read_csv(\"train.csv\")\n",
-        "print (df.head())\n",
+        "#print (df.head())\n",
         "\n",
         "df = df.fillna(df.mean())"
       ]
@@ -77,10 +77,12 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.scatter(X[0], _y)"
+        "Xtest = [[2]]\n",
+        "_y = model.predict(Xtest)\n",
+        "print (_y)"
       ],
       "metadata": {
-        "id": "fk4ufgGYSOdN"
+        "id": "SgpMwSLXRthd"
       },
       "execution_count": null,
       "outputs": []
@@ -88,12 +90,28 @@
     {
       "cell_type": "code",
       "source": [
-        "Xtest = [[2]]\n",
-        "_y = model.predict(Xtest)\n",
-        "print (_y)"
+        "coef = model.coef_\n",
+        "intercept = model.intercept_\n",
+        "\n",
+        "print (f'coef = {coef},intercept = {intercept} ')"
       ],
       "metadata": {
-        "id": "SgpMwSLXRthd"
+        "id": "exuvQju2MjN8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df['Age'].to_numpy()\n",
+        "plt.scatter(X, y,color='g') \n",
+        "plt.plot(X, coef[0]*X + model.intercept_, '-r')\n",
+        "\n",
+        "plt.scatter(Xtest[0], _y,color='r') "
+      ],
+      "metadata": {
+        "id": "ARw8XrJvMRoo"
       },
       "execution_count": null,
       "outputs": []
