Colaboratory를 통해 생성됨

--- a/5_titanic_age_fare_lr.ipynb
+++ b/5_titanic_age_fare_lr.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPbHWsTPV7/4LhdCbQUar5Z",
+      "authorship_tag": "ABX9TyM3vnW99IbSwwfqZRg0Udaj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,11 @@
       "cell_type": "code",
       "source": [
         "model = linear_model.LinearRegression()\n",
-        "model.fit(X, y)"
+        "# X의 값을 추출하여 100 * 1의 2차원 배열로 구성\n",
+        "# y를 데이터프레임 Fare를 추출함\n",
+        "X = df['Age']\n",
+        "y = df['Fare']\n",
+        "model.fit(X.values.reshape(-1,1), y)"
       ],
       "metadata": {
         "id": "46t1pd7DRi5f"
@@ -104,10 +108,8 @@
     {
       "cell_type": "code",
       "source": [
-        "X = df['Age'].to_numpy()\n",
         "plt.scatter(X, y,color='g') \n",
         "plt.plot(X, coef[0]*X + model.intercept_, '-r')\n",
-        "\n",
         "plt.scatter(Xtest[0], _y,color='r') "
       ],
       "metadata": {
