Colaboratory를 통해 생성됨

--- a/5_iris_svm.ipynb
+++ b/5_iris_svm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNo9JrFujW5UNcGGK7qXJ79",
+      "authorship_tag": "ABX9TyM4ttCyJIzW2cg5F8asuTJF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,7 @@
       "source": [
         "from sklearn.datasets import load_iris\n",
         "from matplotlib import pyplot as plt\n",
+        "import pandas as pd\n",
         "iris = load_iris()"
       ]
     },
@@ -65,11 +66,9 @@
     {
       "cell_type": "code",
       "source": [
-        "features = iris['data']\n",
+        "X = iris['data']\n",
         "feature_names = iris['feature_names']\n",
-        "target = iris['target']\n",
-        "print (features[:5])\n",
-        "print (target[0:5])"
+        "y = iris['target']"
       ],
       "metadata": {
         "id": "qoq7HpEOlXDt"
@@ -80,39 +79,12 @@
     {
       "cell_type": "code",
       "source": [
-        "target"
+        "X = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
+        "y = pd.DataFrame(iris.target, columns=['target'])\n",
+        "df = pd.concat ([X,y], axis =1)"
       ],
       "metadata": {
         "id": "ZvNPSi0Kl3ed"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd # 데이터 프레임으로 변환을 위해 임포트\n",
-        "import numpy as np # 고수학 연산을 위해 임포트\n",
-        "\n",
-        "# feature_names 와 target을 레코드로 갖는 데이터프레임 생성\n",
-        "df = pd.DataFrame(data=iris.data, columns=iris.feature_names)\n",
-        "X = df\n",
-        "df['target'] = iris.target\n",
-        "y = iris.target"
-      ],
-      "metadata": {
-        "id": "MR64aix5mBdU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "type(iris.target.dtype)"
-      ],
-      "metadata": {
-        "id": "JoE1I0bGolPX"
       },
       "execution_count": null,
       "outputs": []
@@ -132,7 +104,7 @@
     {
       "cell_type": "code",
       "source": [
-        "y[0]"
+        "x_test"
       ],
       "metadata": {
         "id": "S2oxC9D1ouZ2"
@@ -145,8 +117,8 @@
       "source": [
         "from sklearn.svm import SVC\n",
         "from sklearn.metrics import accuracy_score\n",
-        "#estimator = SVC(kernel='linear', C=1.0) #linear SVM\n",
-        "estimator = SVC() #linear SVM\n",
+        "estimator = SVC(kernel='linear', C=1.0) #linear SVM\n",
+        "#estimator = SVC() #linear SVM\n",
         "\n",
         "estimator.fit(x_train, y_train)\n",
         "y_predict = estimator.predict(x_train) \n",
@@ -155,6 +127,55 @@
       ],
       "metadata": {
         "id": "TValQ1a-oSaQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_predict = estimator.predict(x_test) \n",
+        "score = accuracy_score(y_test, y_predict)\n",
+        "print(score) #1.0"
+      ],
+      "metadata": {
+        "id": "qepxKhSdplD8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test"
+      ],
+      "metadata": {
+        "id": "mXWl9VJPqFDE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_test.target"
+      ],
+      "metadata": {
+        "id": "-EIGk3rNgtP-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test_sample = [[6.3, 2.3, 4.4, 1.2]]\n",
+        "y_test_predict = estimator.predict(x_test_sample) \n",
+        "\n",
+        "print (y_test_predict)"
+      ],
+      "metadata": {
+        "id": "LOGkNB3QprA4"
       },
       "execution_count": null,
       "outputs": []
