Colaboratory를 통해 생성됨

--- a/5_iris_svm.ipynb
+++ b/5_iris_svm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM4ttCyJIzW2cg5F8asuTJF",
+      "authorship_tag": "ABX9TyOrM09yRle7iW1Uge2sUeoE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x_test"
+        "type(y_train)"
       ],
       "metadata": {
         "id": "S2oxC9D1ouZ2"
@@ -147,10 +147,26 @@
     {
       "cell_type": "code",
       "source": [
-        "x_test"
+        "# 첫번쨰 인덱스의 값 \n",
+        "# loc 인덱스를 기준으로 행 데이터 추출\n",
+        "# iloc 행 번호를 기준으로 행 데이터 추출\n",
+        "# \n",
+        "print (x_test.loc[0])  # 인덱스 기준\n",
+        "print (x_test.iloc[0]) # 행번호 기준\n"
       ],
       "metadata": {
         "id": "mXWl9VJPqFDE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test"
+      ],
+      "metadata": {
+        "id": "9isL8k1gj9dz"
       },
       "execution_count": null,
       "outputs": []
